--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 zetl/zetl_scripts/LoadPostalCodes/.pwd
 zetl/zetl_scripts/LoadPostalCodes/.connection
 .schemawiz_config1
+zetl_scripts/Backup/mar102023.zip
