--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ zetl/zetl_scripts/LoadPostalCodes/.pwd
 zetl/zetl_scripts/LoadPostalCodes/.connection
 .schemawiz_config1
 zetl_scripts/Backup/mar102023.zip
+zetl_scripts/Restore/canweather.station_events.tsv
